# pledgr-contracts

./: .gitignore  README.md
evm/: PledgrPayments.sol  SubscriptionManager.sol
evm/contracts/buyout-auction/: BuyOutAuction.sol  BuyOutAuctionFactory.sol  interfaces.sol
evm/scripts/: deploy-arbitrum-testnet.js
solana/: Anchor.toml  Cargo.toml
solana/idl/: pledgr.json
solana/programs/pledgr/: Cargo.toml
solana/programs/pledgr/src/: errors.rs  lib.rs  state.rs
solana/programs/pledgr/src/instructions/: add_supported_token.rs  batch_renewal.rs  cancel_subscription.rs  close_subscription.rs  downgrade_subscription.rs  emergency_withdraw.rs  initialize.rs  manage_executors.rs  mod.rs  process_auto_renewal.rs  process_payment.rs  remove_supported_token.rs  set_auto_renewal_consent.rs  set_platform_wallet.rs  subscribe.rs  toggle_pause.rs  update_platform_wallet.rs  update_status.rs  upgrade_subscription.rs
solana/scripts/: config.js  deploy.sh  init-pledgr-devnet.js  test-basic.js  test-status.js  test-usecases.js
